fixed screen margin on iphone rotation

--- a/sc.css
+++ b/sc.css
@@ -205,7 +205,7 @@ body{
     border-radius:8px;
     position:relative;
     left:15px;
-    top:20px; 
+    top:40px; 
 }
 .screen input{
     background-color:#99ccff;
